--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div>
           <div>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
-              <div class="bg-white p-5 pb-10 rounded-lg h-full">
+              <div id="prod1" class="bg-white p-5 pb-10 rounded-lg">
                 <div class="bg-secondery-bg mb-5 rounded-lg h-3/5 grid content-center justify-center">
                   <img class="w-9/12 mx-auto" src="images/prod1.png" alt="">
                 </div>
@@ -66,7 +66,7 @@
                 <h6 class="text-xl font-semibold text-center text-gray-900 py-2">K. Accessories</h6>
                 <p class="text-xl font-normal text-center text-secondery-color">39.00 TK</p>
               </div>
-              <div class="bg-white p-5 pb-10 rounded-lg">
+              <div id="prod2" class="bg-white p-5 pb-10 rounded-lg">
                 <div class="bg-secondery-bg mb-5 rounded-lg h-3/5 grid content-center justify-center">
                   <img class="w-9/12 mx-auto" src="images/prod2.png" alt="">
                 </div>
@@ -80,7 +80,7 @@
                 <h6 class="text-xl font-semibold text-center text-gray-900 py-2">K. Accessories</h6>
                 <p class="text-xl font-normal text-center text-secondery-color">25.00 TK</p>
               </div>
-              <div class="bg-white p-5 pb-10 rounded-lg">
+              <div id="prod3" class="bg-white p-5 pb-10 rounded-lg">
                 <div class="bg-secondery-bg mb-5 rounded-lg h-3/5 grid content-center justify-center">
                   <img class="w-9/12 mx-auto" src="images/prod3.png" alt="">
                 </div>
@@ -99,7 +99,7 @@
           <div>
             <h3 class="text-2xl lg:text-4xl font-semibold text-gray-900 pt-14 pb-8">Sportswear</h3>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
-              <div class="bg-white p-5 pb-10 rounded-lg">
+              <div id="prod4" class="bg-white p-5 pb-10 rounded-lg">
                 <div class="bg-secondery-bg mb-5 rounded-lg h-3/5 grid content-center justify-center">
                   <img class="w-9/12 mx-auto" src="images/prod4.png" alt="">
                 </div>
@@ -113,7 +113,7 @@
                 <h6 class="text-xl font-semibold text-center text-gray-900 py-2">Sports Back Cap</h6>
                 <p class="text-xl font-normal text-center text-secondery-color">49.00 TK</p>
               </div>
-              <div class="bg-white p-5 pb-10 rounded-lg">
+              <div id="prod5" class="bg-white p-5 pb-10 rounded-lg">
                 <div class="bg-secondery-bg mb-5 rounded-lg h-3/5 grid content-center justify-center">
                   <img class="w-9/12 mx-auto" src="images/prod5.png" alt="">
                 </div>
@@ -127,7 +127,7 @@
                 <h6 class="text-xl font-semibold text-center text-gray-900 py-2">Full Jersey Set</h6>
                 <p class="text-xl font-normal text-center text-secondery-color">69.00 TK</p>
               </div>
-              <div class="bg-white p-5 pb-10 rounded-lg">
+              <div id="prod6" class="bg-white p-5 pb-10 rounded-lg">
                 <div class="bg-secondery-bg mb-5 rounded-lg h-3/5 grid content-center justify-center">
                   <img class="w-9/12 mx-auto" src="images/prod6.png" alt="">
                 </div>
@@ -146,7 +146,7 @@
           <div>
             <h3 class="text-2xl lg:text-4xl font-semibold text-gray-900 pt-14 pb-8">Furniture</h3>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
-              <div class="bg-white p-5 pb-10 rounded-lg">
+              <div id="prod7" class="bg-white p-5 pb-10 rounded-lg">
                 <div class="bg-secondery-bg mb-5 rounded-lg h-3/5 grid content-center justify-center">
                   <img class="w-9/12 mx-auto" src="images/prod7.png" alt="">
                 </div>
@@ -160,7 +160,7 @@
                 <h6 class="text-xl font-semibold text-center text-gray-900 py-2">Sports Back Cap</h6>
                 <p class="text-xl font-normal text-center text-secondery-color">185.00 TK</p>
               </div>
-              <div class="bg-white p-5 pb-10 rounded-lg">
+              <div id="prod8" class="bg-white p-5 pb-10 rounded-lg">
                 <div class="bg-secondery-bg mb-5 rounded-lg h-3/5 grid content-center justify-center">
                   <img class="w-9/12 mx-auto" src="images/prod8.png" alt="">
                 </div>
@@ -174,7 +174,7 @@
                 <h6 class="text-xl font-semibold text-center text-gray-900 py-2">Children play</h6>
                 <p class="text-xl font-normal text-center text-secondery-color">299.00 TK</p>
               </div>
-              <div class="bg-white p-5 pb-10 rounded-lg">
+              <div id="prod9" class="bg-white p-5 pb-10 rounded-lg">
                 <div class="bg-secondery-bg mb-5 rounded-lg h-3/5 grid content-center justify-center">
                   <img class="w-9/12 mx-auto" src="images/prod9.png" alt="">
                 </div>
@@ -211,9 +211,9 @@
             <hr class="my-3">
 
             <div class="space-y-1.5">
-              <p class="md:text-xl xl:text-2xl font-medium text-gray-900 xl:leading-10">Total price : <span class="text-secondery-color"><span>00</span>TK</span></p>
-              <p class="md:text-xl xl:text-2xl font-medium text-gray-900 xl:leading-10">Discount : <span class="text-secondery-color"><span>00</span>TK</span></p>
-              <p class="md:text-xl xl:text-2xl font-medium text-gray-900 xl:leading-10">Total : <span class="text-secondery-color"><span>00</span>TK</span></p>
+              <p class="md:text-xl xl:text-2xl font-medium text-gray-900 xl:leading-10">Total price : <span class="text-secondery-color"><span id="total-price">00</span>TK</span></p>
+              <p class="md:text-xl xl:text-2xl font-medium text-gray-900 xl:leading-10">Discount : <span class="text-secondery-color"><span id="discount">00</span>TK</span></p>
+              <p class="md:text-xl xl:text-2xl font-medium text-gray-900 xl:leading-10">Total : <span class="text-secondery-color"><span id="total">00</span>TK</span></p>
             </div>
 
             <hr class="my-6">
